Revision history for Perl module Mojolicious::Plugin::ReplyTable

0.06 2016-07-21
  - Fix a test broken in Mojolicious 7.0

0.05 2015-10-02  
  - Added support for Text::Table::Tiny

0.04 2015-04-28
  - Mojolicious dependency set to 5.60 for needed features

0.03 2015-04-27
  - Fix tests on older Perl versions

0.02 2015-04-27
  - POD fixes (Akron, kberov)

0.01 2015-04-26
  - Initial release
