@@ -1,0 +1,8 @@
+requires 'Mojolicious' => '5.60'; # Mojo::Collection->to_array
+requires 'Text::CSV';
+
+test_requires 'Test::Without::Module';
+
+recommends 'Spreadsheet::WriteExcel';
+recommends 'Excel::Writer::XLSX';
+recommends 'Text::Table::Tiny';
