@@ -2,6 +2,7 @@ Revision history for Perl module Mojolicious::Plugin::ReplyTable
 
 0.06 2016-07-21
   - Fix a test broken in Mojolicious 7.0
+  - Convert dist to Module::Build::Tiny
 
 0.05 2015-10-02  
   - Added support for Text::Table::Tiny
